# add2anki

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml  test_improved_detection.py
.github/workflows/: docs.yml
add2anki/: anki_client.py  audio.py  cli.py  config.py  exceptions.py  language_detection.py  srt.py  translation.py
add2anki/stubs/: fast_langdetect.pyi
docs/: command-line.md  examples.md  language_detection.md
langki/: __init__.py  anki_client.py  audio.py  cli.py  config.py  exceptions.py  translation.py
scripts/: get_version.sh
tests/: __init__.py  test_anki_client.py  test_audio.py  test_cli.py  test_language_detection.py  test_language_detection_integration.py  test_translation.py
