[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langki"
version = "0.1.0"
description = "CLI tool to add language learning cards to Anki"
authors = [{ name = "Oliver Steele", email = "steele@osteele.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.2",
    "openai>=1.13.3",
    "elevenlabs>=0.2.26",
    "requests>=2.31.0",
    "google-cloud-texttospeech>=2.14.1",
    "pyright>=1.1.396",
]

[project.scripts]
langki = "langki.cli:main"

[dependency-groups]
dev = ["black>=23.12.1", "mypy>=1.8.0", "ruff>=0.1.9", "pytest>=7.4.4"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.black]
line-length = 100
target-version = ["py312"]
